--- a/hw1/css/styles.css
+++ b/hw1/css/styles.css
@@ -53,11 +53,11 @@ float:left;
 .attachment h2{
 	font-size:40px;
   width:40px;
-  margin-right:20px;
   border:3px double #ccc;
   padding:0.9em 0.3em;
   line-height:1.2;
-  margin-left:10px;
+  margin-right:20px;
+  margin-left:35px;
   margin-top:0;
 }
 .attachment ul{
@@ -73,14 +73,24 @@ float:left;
 	text-align:center;
   clear:left;
   padding: 20px;
+  color:#999;
 }
 .attachment figure{
 	 margin:0px;
   text-align:center;
   color:#666;
   font-size:13px;
-  border:1px solid #ccc;
+  border:1px solid #ccc; 
+  padding: 10px;
+}
+.attachment figure.left img{
+  padding: 20px;
+  padding-bottom: 0px;
+}
+.attachment figure.left figcaption{
+  margin-bottom: 15px;
 }
 span{
   font-weight: bold;
+  color:#000;
 }
